# GoBiz_env

./: .env.example  .gitignore  Dockerfile  README.md  README_DONKEY_MODE.md  __init__.py  client.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  utils.py
cases/: __init__.py  case_bank.py  deal_advisor.py  market_entry.py  profitability.py
graders/: llm_grader.py  rubric_grader.py
server/: Dockerfile  __init__.py  app.py  bizreasongym_environment.py  businessenv_environment.py  environment.py
