# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-businessenv"
version = "0.1.0"
description = "businessenv — Multi-turn business reasoning RL environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime
    "openenv-core[core]>=0.2.2",
    # LLM client for inference & LLM-as-judge grader
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
server = "businessenv.server.app:main"

[tool.setuptools]
include-package-data = true
packages = [
    "businessenv",
    "businessenv.server",
    "businessenv.cases",
    "businessenv.graders",
]
[tool.setuptools.package-dir]
"businessenv" = "."
"businessenv.server" = "server"
"businessenv.cases" = "cases"
"businessenv.graders" = "graders"